# swagger-output.json
@@ -62,6 +62,28 @@
         }
       }
     },
+    "/config/": {
+      "get": {
+        "tags": [
+          "Config"
+        ],
+        "summary": "Return the configuration of the torrent",
+        "description": "",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "The configuration",
+            "schema": {
+              "type": "boolean",
+              "example": true,
+              "xml": {
+                "name": "main"
+              }
+            }
+          }
+        }
+      }
+    },
     "/torrent/add": {
       "post": {
         "tags": [
